--- a/bold.html
+++ b/bold.html
@@ -22,6 +22,7 @@
 
         @media only screen and (max-width: 768px) {
             .Hide{
+                display: none;
             }
         }
         @media (min-width: 769px) {
@@ -53,86 +54,60 @@
 <table loading="lazy" style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:35%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:15.6%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
     <tr>
         <th style="width:50%;" colspan="2">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
 
 <table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
-        <div class="content_img">
             <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
-        </div>
     </th>
 </table>
 <table loading="lazy" style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:8%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:8%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:8%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
 
 <table loading="lazy" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:8%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:8%;">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
-            </div>
         </th>
 </table>
 
 <table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
@@ -141,21 +116,15 @@
 <table loading="lazy" class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:38.8%;" rowspan="2">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
     <tr>
         <th style="width:45.5%;" >
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
@@ -163,9 +132,7 @@
 <table loading="lazy"  class= "Hide" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
@@ -175,42 +142,31 @@
 <table loading="lazy" class= "Hide"  style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
 <table loading="lazy"  class= "Hide"  style="width: 67%;padding-top: 2px;">
     <tr>
         <th style="width:67%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:0.5%"></th>
         <th style="width:30%">
-            <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
 </table>
@@ -219,35 +175,23 @@
 <table loading="lazy" class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out7.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:16.66%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out2.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:16.66%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out3.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:16.66%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out4.webp" style="width: 100%">
-            </div>
         </th>
 
         <th style="width:16.66%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/moch2.webp" style="width: 100%">
-            </div>
         </th>
         <th style="width:14.9%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out6.webp" style="width: 100%">
-            </div>
         </th>
     </tr>
     <tr>
@@ -267,10 +211,6 @@
     <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
-
-
-
-
 <div id="myModal" class="modal" >
 
     <!-- The Close Button -->
@@ -283,7 +223,6 @@
     <div id="caption"></div>
 </div>
 
-<!--
 <script class = "Hide">
         // create references to the modal...
         var modal = document.getElementById('myModal');
@@ -335,6 +274,5 @@
             }
         };
 </script>
---!>
 </body>
 </html>
